# sceneforged

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.dv-tools  FRESH_SCENEFORGED.md  SCENEFOREGED_CONVERTER.md  SCENEFORGED_PLAYER.md  config.example.toml  docker-compose.yml  dv-convert.sh  profile-b-technical.md
.forgejo/workflows/: build.yaml
.github/workflows/: ci.yml  docker.yml  release.yml  test.yml
benches/: RESULTS.md  db_item_queries.rs  dto_serialization.rs  fts_search.rs  hls_persistence.rs  hls_pipeline.rs  probe_parsing.rs  rule_matching.rs  sendfile_classify.rs  streaming.rs  template_substitution.rs
crates/sceneforged-av/: Cargo.toml
crates/sceneforged-av/src/: error.rs  lib.rs  template.rs  tools.rs  workspace.rs
crates/sceneforged-av/src/actions/: audio.rs  dovi.rs  mod.rs  remux.rs  strip.rs
crates/sceneforged-av/src/probe/: ffprobe.rs  mediainfo.rs  mod.rs  native_ffmpeg.rs  pure_rust.rs  types.rs
crates/sceneforged-common/: Cargo.toml
crates/sceneforged-common/src/: error.rs  ids.rs  lib.rs  paths.rs  types.rs
crates/sceneforged-db/: Cargo.toml
crates/sceneforged-db/src/: lib.rs  models.rs  pool.rs
crates/sceneforged-db/src/migrations/: 001_initial.sql  002_media_files.sql  003_streams_refactor.sql  004_profile_system.sql  005_hls_cache.sql  mod.rs
crates/sceneforged-db/src/queries/: auth_tokens.rs  conversion_jobs.rs  hls_cache.rs  images.rs  items.rs  libraries.rs  media_files.rs  mod.rs  playback.rs  sync.rs  users.rs
crates/sceneforged-media/: Cargo.toml
crates/sceneforged-media/src/: error.rs  lib.rs  precompute.rs
crates/sceneforged-media/src/fmp4/: mod.rs  moof.rs
crates/sceneforged-media/src/hls/: mod.rs  playlist.rs
crates/sceneforged-media/src/mp4/: atoms.rs  mod.rs  reader.rs  sample_table.rs
crates/sceneforged-media/src/segment_map/: builder.rs  mod.rs
crates/sceneforged-parser/: Cargo.toml
crates/sceneforged-parser/.github/workflows/: ci.yml
crates/sceneforged-parser/benches/: parser_benchmark.rs
crates/sceneforged-parser/docs/: FIXTURE_CONFLICTS.md  PARSER_STATE.md
crates/sceneforged-parser/examples/: debug_tokens.rs  test_daily.rs  test_international.rs  test_paren.rs  test_range.rs
crates/sceneforged-parser/src/: config.rs  lib.rs  wasm.rs
crates/sceneforged-parser/src/lexer/: mod.rs  token.rs
crates/sceneforged-parser/src/model/: codec.rs  edition.rs  episode.rs  field.rs  frame_rate.rs  hdr.rs  language.rs  media_type.rs  mod.rs  quality.rs  release.rs  streaming.rs
crates/sceneforged-parser/src/output/: generic.rs  mod.rs  plex.rs  sonarr.rs
crates/sceneforged-parser/src/parser/: codec.rs  episode.rs  metadata.rs  mod.rs  quality.rs  title.rs
crates/sceneforged-parser/tests/: all_fixtures_test.rs
crates/sceneforged-parser/tests/fixtures/: anime.json  baseline.json  episodes.json  movies.json  sonarr_cases.json
crates/sceneforged-probe/: .dockerignore  Cargo.toml  Dockerfile  README.md  convert-dv.sh
crates/sceneforged-probe/examples/: probe.rs
crates/sceneforged-probe/src/: error.rs  lib.rs  types.rs
crates/sceneforged-probe/src/codec/: mod.rs
crates/sceneforged-probe/src/codec/hevc/: mod.rs  nal.rs  sei.rs  sps.rs
crates/sceneforged-probe/src/container/: mkv.rs  mod.rs  mp4.rs
crates/sceneforged-probe/src/hdr/: bitstream.rs  dolby_vision.rs  mod.rs
crates/sceneforged-probe/tests/: integration.rs
crates/sf-av/: Cargo.toml
crates/sf-av/src/: command.rs  lib.rs  tools.rs  workspace.rs
crates/sf-av/src/actions/: audio.rs  dovi.rs  exec.rs  hls_segment.rs  mod.rs  profile_b.rs  remux.rs  strip.rs
crates/sf-av/src/probe/: ffprobe.rs  mediainfo.rs  mod.rs
crates/sf-core/: Cargo.toml
crates/sf-db/: Cargo.toml
crates/sf-db/src/: lib.rs  migrations.rs  models.rs  pool.rs
crates/sf-db/src/queries/: auth.rs  conversion_jobs.rs  favorites.rs  hls_cache.rs  images.rs  invitations.rs  items.rs  jobs.rs  libraries.rs  media_files.rs  mod.rs  playback.rs  subtitle_tracks.rs  users.rs
crates/sf-media/: Cargo.toml
crates/sf-parser/: Cargo.toml
crates/sf-parser/benches/: parser_throughput.rs
crates/sf-parser/src/: lib.rs  parser.rs  tokenizer.rs  types.rs
crates/sf-pipeline/: Cargo.toml
crates/sf-pipeline/src/: action.rs  context.rs  executor.rs  factory.rs  lib.rs
crates/sf-pipeline/src/actions/: add_compat_audio.rs  dv_convert.rs  exec.rs  mod.rs  profile_b_convert.rs  remux.rs  strip_tracks.rs
crates/sf-probe/: Cargo.toml
crates/sf-probe/src/: composite.rs  lib.rs  prober.rs  rust_prober.rs  types.rs
crates/sf-probe/src/hdr/: detect.rs  dolby_vision.rs  mod.rs
crates/sf-server/: Cargo.toml
crates/sf-server/src/: context.rs  conversion_processor.rs  error.rs  hls_prep.rs  lib.rs  notifications.rs  processor.rs  router.rs  scanner.rs  sendfile.rs  tmdb.rs  watcher.rs
crates/sf-server/src/middleware/: auth.rs  mod.rs  rate_limit.rs  request_id.rs
crates/sf-server/src/routes/: admin.rs  auth.rs  config.rs  conversions.rs  events.rs  health.rs  images.rs  invitations.rs  items.rs  jobs.rs  libraries.rs  metadata.rs  metrics.rs  mod.rs  playback.rs  stream.rs  streaming_helpers.rs  subtitles.rs  users.rs  webhook.rs
crates/sf-server/src/routes/jellyfin/: dto.rs  items.rs  mod.rs  playstate.rs  streaming.rs  system.rs  users.rs
src/: cli.rs  lib.rs  main.rs  processor.rs
tests/: admin_middleware_test.rs  api_test.rs  auth_login_test.rs  auth_test.rs  config_test.rs  conversions_test.rs  e2e_cli.rs  e2e_server.rs  events_test.rs  images_test.rs  integration_api.rs  integration_pipeline.rs  integration_probe.rs  integration_webhook.rs  invitations_test.rs  items_test.rs  jellyfin_items_test.rs  jellyfin_playstate_test.rs  jellyfin_streaming_test.rs  jellyfin_test.rs  jellyfin_user_scoped_test.rs  job_lifecycle_test.rs  libraries_test.rs  playback_test.rs  rule_matching_test.rs  sendfile_test.rs  stream_test.rs  streaming_e2e_test.rs  subtitles_test.rs  users_test.rs  webhook_test.rs
ui/: package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
(+241 files in other folders)
