[package]
name = "sceneforged"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/sceneforged/sceneforged"
description = "Media automation platform for post-processing with HDR/Dolby Vision support"

[workspace]
resolver = "2"
members = [
    ".",
    "crates/sceneforged-av",
    "crates/sceneforged-common",
    "crates/sceneforged-db",
    "crates/sceneforged-media",
    "crates/sceneforged-parser",
    "crates/sceneforged-probe",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/sceneforged/sceneforged"

[workspace.dependencies]
# Internal crates
sceneforged-av = { path = "crates/sceneforged-av" }
sceneforged-common = { path = "crates/sceneforged-common" }
sceneforged-db = { path = "crates/sceneforged-db" }
sceneforged-media = { path = "crates/sceneforged-media" }
sceneforged-parser = { path = "crates/sceneforged-parser" }
sceneforged-probe = { path = "crates/sceneforged-probe" }

# Shared external dependencies
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
which = "7"
chrono = { version = "0.4", features = ["serde"] }
dolby_vision = "3.3"
axum = "0.8"
tower = "0.5"
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
uuid = { version = "1", features = ["v4", "serde"] }
argon2 = { version = "0.5", features = ["std"] }
image = "0.25"
notify = "6"
walkdir = "2"
rayon = "1"
num_cpus = "1"
reqwest = { version = "0.11", features = ["json"] }

[dependencies]
# Sceneforged libraries
sceneforged-av = { workspace = true, features = ["all", "tracing", "pure-rust-probe"] }
sceneforged-common = { workspace = true }
sceneforged-db = { workspace = true }
sceneforged-media = { workspace = true }
sceneforged-parser = { workspace = true }

# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { workspace = true }

# Web server
axum = "0.7"
tower = { workspace = true }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File watching
notify = "6"
notify-debouncer-mini = "0.4"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Utilities
chrono = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
shellexpand = "3"
which = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
tempfile = { workspace = true }
async-trait = "0.1"
parking_lot = "0.12"
walkdir = { workspace = true }
regex = "1"
dashmap = "6"
rusqlite = { workspace = true }
bytes = { workspace = true }

# OpenAPI documentation
utoipa = { version = "5", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }

# Security
axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
bcrypt = "0.16"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
toml_edit = "0.22"
hex = "0.4"
time = "0.3"

# Platform-specific optimizations
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["fs", "net"] }

[dev-dependencies]
tokio-test = "0.4"
assert_matches = "1.5"
wiremock = "0.6"
serial_test = "3"
tower = { workspace = true, features = ["util"] }
hyper = { version = "1.0", features = ["full"] }
http-body-util = "0.1"
assert_cmd = "2"
predicates = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "probe_parsing"
harness = false

[[bench]]
name = "rule_matching"
harness = false

[[bench]]
name = "template_substitution"
harness = false

[[bench]]
name = "streaming"
harness = false
