[workspace]
members = [
    "crates/sf-core",
    "crates/sf-probe",
    "crates/sf-av",
    "crates/sf-rules",
    "crates/sf-pipeline",
    "crates/sf-db",
    "crates/sf-media",
    "crates/sf-parser",
    "crates/sf-server",
]
resolver = "2"

[workspace.dependencies]
# Internal crates
sf-core = { path = "crates/sf-core" }
sf-probe = { path = "crates/sf-probe" }
sf-av = { path = "crates/sf-av" }
sf-rules = { path = "crates/sf-rules" }
sf-pipeline = { path = "crates/sf-pipeline" }
sf-db = { path = "crates/sf-db" }
sf-media = { path = "crates/sf-media" }
sf-parser = { path = "crates/sf-parser" }
sf-server = { path = "crates/sf-server" }

# Async runtime
tokio = { version = "1.49", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = "0.1"

# Web framework
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# IDs and time
uuid = { version = "1.18", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Database
rusqlite = { version = "0.38", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.32"

# File watching
notify = "8.2"
walkdir = "2"

# Rate limiting
governor = "0.8"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.18"

# OpenAPI
utoipa = "5.4"
utoipa-swagger-ui = "9.0"

# Versioning
semver = { version = "1.0", features = ["serde"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Image processing
image = "0.25"

# Media parsing
dolby_vision = "3.3"
matroska = "0.29"
mp4parse = "0.17"
bitstream-io = "2.6"

# Text parsing
winnow = "0.7"
logos = "0.14"

# Crypto
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
bcrypt = "0.17"
rand = "0.8"

# Concurrent data structures
dashmap = "6"

# System / FFI
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "service"] }
libc = "0.2"

# Utilities
tempfile = "3.15"
which = "7.0"
parking_lot = "0.12"

# Testing
proptest = "1.6"
wiremock = "0.6"
assert_cmd = "2.0"

[package]
name = "sceneforged"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sceneforged"
path = "src/main.rs"

[dependencies]
sf-server.workspace = true
sf-core.workspace = true
sf-probe.workspace = true
sf-av.workspace = true
sf-rules.workspace = true
sf-pipeline.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
uuid.workspace = true
bcrypt.workspace = true
rand.workspace = true

[dev-dependencies]
sf-db.workspace = true
sf-core.workspace = true
sf-rules.workspace = true
sf-probe.workspace = true
sf-av.workspace = true
sf-server.workspace = true
sf-media.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
reqwest = { workspace = true, features = ["json"] }
serde_json.workspace = true
parking_lot.workspace = true
axum.workspace = true
hyper.workspace = true
hyper-util.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
tempfile.workspace = true
dashmap.workspace = true
