[package]
name = "sceneforged-av"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Media probing and processing library for video files"
keywords = ["media", "video", "ffmpeg", "dolby-vision", "hdr"]
categories = ["multimedia", "multimedia::video"]

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Tool detection
which = { workspace = true }

# Temp files
tempfile = { workspace = true }

# Logging (optional)
tracing = { workspace = true, optional = true }

# Dolby Vision (optional, for native DV processing)
dolby_vision = { workspace = true, optional = true }

# Async support (optional)
tokio = { version = "1", features = ["process"], optional = true }

# Native FFmpeg bindings (v4 supports FFmpeg 8.0)
ffmpeg-the-third = { version = "4" }

# libc for POSIX error codes (used in BSF error handling)
libc = "0.2"

# Pure Rust probing (optional)
sceneforged-probe = { workspace = true, optional = true }

[features]
default = ["probe", "native-ffmpeg"]

# Core probing functionality (uses CLI tools: ffprobe/mediainfo)
probe = []

# Native FFmpeg bindings - direct struct access, no JSON parsing
# Requires: pkg-config, FFmpeg dev libraries (brew install pkgconf ffmpeg)
# NOTE: Currently disabled by default - API needs updating for ffmpeg-the-third v4 (FFmpeg 8.0)
native-ffmpeg = []

# Pure Rust probing - no external tools required
pure-rust-probe = ["dep:sceneforged-probe"]

# Remuxing actions (requires ffmpeg/mkvmerge CLI)
remux = []

# Dolby Vision conversion (uses native dolby_vision crate)
dovi = ["dep:dolby_vision"]

# Audio transcoding (requires ffmpeg CLI)
audio = []

# Enable all features except pure-rust-probe
all = ["probe", "remux", "dovi", "audio", "native-ffmpeg"]

# Enable all features including native-ffmpeg (requires FFmpeg dev libraries)
all-native = ["all", "native-ffmpeg"]

# Async subprocess execution
async = ["dep:tokio"]

# Enable tracing support
tracing = ["dep:tracing"]

[dev-dependencies]
tempfile = { workspace = true }
