[package]
name = "sceneforged-db"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "SQLite database schema, migrations, and queries for sceneforged"

[dependencies]
sceneforged-common = { path = "../sceneforged-common" }

rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
