[package]
name = "sceneforged-media"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MP4/MKV parsing, fMP4 serialization, HLS segment maps for sceneforged"

[dependencies]
sceneforged-common = { path = "../sceneforged-common" }

bytes = "1"
thiserror = { workspace = true }
