[package]
name = "sceneforged-probe"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure Rust video file probing with HDR/Dolby Vision detection"
keywords = ["video", "hdr", "dolby-vision", "media", "probe"]
categories = ["multimedia::video", "parser-implementations"]

[dependencies]
# Container parsing
matroska = "0.30"
mp4parse = "0.17"

# Video codec parsing
dolby_vision = { workspace = true }
bitstream-io = "2"

# Utilities
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
