[package]
name = "sf-av"
version = "0.1.0"
edition = "2021"

[dependencies]
sf-core.workspace = true
sf-probe.workspace = true
which.workspace = true
tokio.workspace = true
tempfile.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
utoipa.workspace = true
