[package]
name = "sf-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
sf-core.workspace = true
winnow.workspace = true
logos.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
criterion.workspace = true

[[bench]]
name = "parser_throughput"
harness = false
