[package]
name = "sf-server"
version = "0.1.0"
edition = "2021"

[dependencies]
sf-core.workspace = true
sf-db.workspace = true
sf-pipeline.workspace = true
sf-media.workspace = true
sf-rules.workspace = true
sf-probe.workspace = true
sf-av.workspace = true
sf-parser.workspace = true
axum = { workspace = true, features = ["macros"] }
tower-http.workspace = true
tokio.workspace = true
tokio-util.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
governor.workspace = true
notify.workspace = true
walkdir.workspace = true
reqwest.workspace = true
image.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
parking_lot.workspace = true
async-trait.workspace = true
async-stream = "0.3"
futures-core = "0.3"
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
bcrypt.workspace = true
rand.workspace = true
dashmap.workspace = true
rusqlite.workspace = true
hyper.workspace = true
hyper-util.workspace = true
libc.workspace = true
bincode = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }

[dev-dependencies]
tempfile.workspace = true
